# GridSentinel

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.python  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
bft/: gatekeeper.py  main.py
chaos/: attacker.py  main.py
config/: __init__.py  fleet.yaml  settings.py
dashboard/digital_twin/: main.py
dashboard/god-view/: index.html  package-lock.json  package.json  vite.config.js
dashboard/god-view/src/: App.jsx  index.css
dashboard/src/: App.jsx  index.css
data/aligned/: latest_snapshot.json
data/bft/: trust_ledger.json
data/dispatch/: latest_dispatch.json
data/forecasts/: latest_forecast.json
data/validated/: latest_validated.json
digital_twin/: validate.py
docs/: PROGRESS.md
docs/chaos_report/: generate_report.py
entso_e/: main.py
fleet_sim/: __init__.py  battery_physics.py  bus.py  depot.py  kinesis_writer.py  main.py  models.py  route_loader.py
forecasting/: _threading_fix.py  data_fetch.py  feature_builder.py  inference.py  main.py  mock_data_fetch.py  train.py
ingestion/: __init__.py  consumer_align.py  kinesis_client.py  monitor.py  producer_entso_e.py  producer_weather.py
models/: feature_columns.json  training_metadata.json
mpc/: dispatch.py
mpc/coordinator/: coordinator.py  main.py
mpc/depot/: main.py  solver.py
scripts/: localstack-init.sh  start_demo.sh  stop_demo.sh
tests/unit/: test_feature_builder.py  test_forecasting_pipeline.py
weather/: main.py
