[tool.poetry]
name = "gridsentinel"
version = "0.1.0"
description = "Autonomous Byzantine-Resilient V2G Energy Arbitrage & Grid Safety System"
authors = ["Tshifhiwa Gift Moila <tshifhiwa@gridsentinel.io>"]
readme = "README.md"

[tool.poetry.dependencies]

python = "^3.11"

# AWS
boto3 = "^1.34"
botocore = "^1.34"

# Config
pyyaml = "^6.0"
pydantic = "^2.7"
pydantic-settings = "^2.3"

# Data
numpy = "^1.26"
pandas = "^2.2"
scipy = "^1.13"

# ML
xgboost = "^2.0"
mapie = "^0.8"
optuna = "^3.6"
scikit-learn = "^1.5"

# Optimisation
cvxpy = {extras = ["osqp"], version = "^1.4"}

# Grid physics
pandapower = "^2.13"

# Storage
influxdb-client = {extras = ["async"], version = "^1.43"}
redis = {extras = ["hiredis"], version = "^5.0"}

# API
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
httpx = "^0.27"

# PDF generation (Phase 5 chaos report)
reportlab = "^4.2"
aioboto3 = "^15.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
types-PyYAML = "^6.0"
types-redis = "^4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tool config
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["tests/*", "*/main.py", "dashboard/*"]
